--- a/index.html
+++ b/index.html
@@ -9,8 +9,30 @@
 </head>
 <body>
   <div class="card">
-    <div class="front  w3-round-large"> 
-        <p>個人簡歷</p>
+    <div class="front w3-round-large"> 
+        <div class="top"></div>
+        <div class="mycontent">
+            <div class="Position w3-container">
+                職位：Unity工程師
+            </div>
+            <div class="Name w3-container">
+                陳 嘉 晉
+            </div>
+            <div class="Expertise w3-container">
+                專      長：  Unity_  c#_<br>
+                輔助能力：  3D建模_攝影_影片剪輯_音效製作<br>
+            </div>
+            <div class="Education w3-container">
+                學歷：國立臺中科技大學_多媒體設計系暨研究所_碩士<br>
+                      國立臺中科技大學_多媒體設計系   <br>                          
+                      臺中市立大甲工業高級中等學校_資訊科  <br>              
+            </div>
+            <div class="Contact w3-container">
+                (429)台中市神岡區三角里承德路202巷22號<br>
+                0975-843-450    chen58839@gmail.com<br>
+            </div>
+        </div>
+        <div class="down"></div>
     </div>
     <div class="back  w3-round-large">
          <p>個人作品</p>
