--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="top"></div>
         <div class="mycontent">
             <div class="Position w3-container">
-                職位：Unity工程師
+                <p>職位：Unity工程師</p>
             </div>
             <div class="Name w3-container">
                 陳 嘉 晉
