--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>陳嘉晉_個人名片</title>
 </head>
 <body>
@@ -19,17 +20,27 @@
                 陳 嘉 晉
             </div>
             <div class="Expertise w3-container">
-                專      長：  Unity_  c#_<br>
-                輔助能力：  3D建模_攝影_影片剪輯_音效製作<br>
+                <p>
+                專    長：Unity。C#。C++。VR/AR<br>
+                輔助能力：3D建模。3D動畫。攝影。影片剪輯。音效製作<br>
+                </p>
             </div>
             <div class="Education w3-container">
-                學歷：國立臺中科技大學_多媒體設計系暨研究所_碩士<br>
-                      國立臺中科技大學_多媒體設計系   <br>                          
-                      臺中市立大甲工業高級中等學校_資訊科  <br>              
+              <p style="text-align: center;">
+                學歷：                
+              </p>  
+              <p class="E_history">
+                國立臺中科技大學_多媒體設計系暨研究所_碩士<br>
+                國立臺中科技大學_多媒體設計系   <br>                          
+                臺中市立大甲工業高級中等學校_資訊科  <br>
+              </p>           
             </div>
             <div class="Contact w3-container">
-                (429)台中市神岡區三角里承德路202巷22號<br>
-                0975-843-450    chen58839@gmail.com<br>
+              <p style="margin: 2%;">
+                <i class="material-icons">location_on</i>&nbsp;(429)台中市神岡區三角里承德路202巷22號<br>
+                <i class="material-icons">local_phone</i>&nbsp;0975-843-450 
+                <i class="material-icons">email</i>&nbsp;chen58839@gmail.com<br>
+              </p>
             </div>
         </div>
         <div class="down"></div>
